<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:id="@+id/metronome"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/metronome_padding"
        android:clipToPadding="false"
        android:layout_margin="17dp"
        >

        <View
            android:id="@+id/metronome_indicator_path"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/metronome_indicator_path"/>

        <View
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/metronome_indicator"
            android:layout_width="@dimen/indicator_diameter"
            android:layout_height="@dimen/indicator_diameter"
            android:background="@drawable/metronome_indicator"
            android:elevation="10dp"/>

        <TextView
            android:id="@+id/rep_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/secondary_text"
            android:layout_marginLeft="@dimen/indicator_diameter"
            android:layout_marginRight="@dimen/indicator_diameter"
            tools:text="99"
            android:textSize="@dimen/rep_counter_size"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"/>

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indicator_diameter"
            android:layout_marginRight="@dimen/indicator_diameter"
            android:textColor="@color/accent"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/rep_counter"
            android:gravity="center"
            tools:text="@string/help_in_progress"
            android:textSize="@dimen/help_text_size"/>

        <TextView
            android:id="@+id/stopwarch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indicator_diameter"
            android:layout_marginRight="@dimen/indicator_diameter"
            android:textColor="@color/accent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rep_counter"
            android:gravity="center"
            tools:text="00:00"
            android:textSize="@dimen/stopwatch_text_size"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/set_counter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indicator_diameter"
            android:layout_marginStart="@dimen/indicator_diameter"
            android:textColor="@color/accent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/stopwarch"
            android:text="@string/set_counter_label"
            android:textSize="@dimen/help_text_size"/>

        <TextView
            android:id="@+id/set_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="@dimen/indicator_diameter"
            android:layout_marginEnd="@dimen/indicator_diameter"
            android:textColor="@color/secondary_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/stopwarch"
            android:layout_toRightOf="@+id/set_counter_label"
            android:layout_toEndOf="@+id/set_counter_label"
            android:textSize="@dimen/help_text_size"/>


    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
